Mar21FirstCommit 10:41pm

--- a/COMP2139-Labs/appsettings.json
+++ b/COMP2139-Labs/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  // Lab 3. this appsettings is where all the intialization of the project goes
+  // Which server, which database to use, if connection is trusted,
+  // the data from project.cs goes to the database
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(Localdb)\\mssqllocaldb;Database=ProjectManagementDbMar21Test;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
