For the final ICE 4

--- a/COMP2139-Labs/appsettings.json
+++ b/COMP2139-Labs/appsettings.json
@@ -7,11 +7,35 @@
   },
   "AllowedHosts": "*",
 
+  //"SendGrid": {
+  //  "ApiKey":  ""
+  //},
+
+
+  // --------------------------------
+  //"Serilog": {
+  //  "MinimumLevel": "Information",
+  //  "WriteTo": [
+  //    { "Name": "Console" },
+  //    {
+  //      "Name": "File",
+  //      "Args": {
+  //        "path": "Logs/log-.txt",
+  //        "rollingInterval": "Day"
+  //      }
+  //    }
+  //  ],
+  //  "Enrich": [ "FromLogContext" ],
+  //  "Properties": {
+  //    "Application": "COMP2139-Labs"
+  //  }
+  //},
+
 
   // Lab 3. this appsettings is where all the intialization of the project goes
   // Which server, which database to use, if connection is trusted,
   // the data from project.cs goes to the database
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(Localdb)\\mssqllocaldb;Database=ProjectManagementDbMar21Test;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(Localdb)\\mssqllocaldb;Database=ProjectManagementDbApril10Test;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
