Added screenshots to the README file.

--- a/COMP2139-Labs/COMP2139-Labs.csproj
+++ b/COMP2139-Labs/COMP2139-Labs.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\ProjectManagement\Data\" />
+    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
